--- a/backend/fastAPI/.env
+++ b/backend/fastAPI/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=sqlite:///./chat_app.db
+DATABASE_URL=sqlite:///./chat.db
 SECRET_KEY=your-secret-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
