--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "flashmessage-js": "^1.0.3",
     "js-cookie": "^3.0.5",
     "next": "15.2.0",
     "react": "^19.0.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
