--- a/backend/nodejs/.env
+++ b/backend/nodejs/.env
@@ -1,3 +1,3 @@
 PORT=8000
 JWT_SECRET=your-very-secret-key-here
-MONGO_URI=mongodb://localhost:27017chat-app/ 
+DATABASE_URL=mongodb://localhost:27017/chat-app
