--- a/backend/nodejs/.env
+++ b/backend/nodejs/.env
@@ -1,3 +1,4 @@
 PORT=8000
 JWT_SECRET=your-very-secret-key-here
+JWT_REFRESH_SECRET=your-refresh-token-secret
 DATABASE_URL=mongodb://localhost:27017/chat-app
